# decompress_and_site

./: README.md  work_csv.py  Бюджет 1896.xlsx
app/: pyproject.toml
app/app/: __init__.py
app/app/routes/: default.py
csv_files/: БЕРЕЗЕНЬ.csv  ВЕРЕСЕНЬ.csv  ГРУДЕНЬ.csv  ЖОВТЕНЬ.csv  КВІТЕНЬ.csv  ЛИПЕНЬ.csv  ЛИСТОПАД.csv  ЛЮТИЙ.csv  СІЧЕНЬ.csv  СЕРПЕНЬ.csv  ТРАВЕНЬ.csv  ЧЕРВЕНЬ.csv
