[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mentuly <danlutsencko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
main = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
